--- a/ServerManagement.html
+++ b/ServerManagement.html
@@ -21,6 +21,11 @@
         var reallyTerminate = confirm("Are you sure you want to terminate job #"+jobNum+"? Completed masks will remain. Click 'Ok' to terminate, 'Cancel' to allow job to continue.")
         return reallyTerminate;
       }}
+      function confirmRestart() {{
+        var reallyRestart = confirm("Are you sure you want to restart the server? This will wipe out all jobs. Completed masks will remain. Click 'Ok' to restart, 'Cancel' to allow job to continue.")
+        return reallyRestart;
+      }}
+
     </script>
   </head>
   <body>
@@ -30,6 +35,11 @@
         <div class="row">
           <div class="three columns">Server start time:</div>
           <div class="nine columns"><strong>{startTime}</strong></div>
+        </div>
+        <div class="row">
+          <form action="/restartServer" onsubmit="return confirmRestart()">
+              <input class="button button-warning" type="submit" value="Restart server" />
+          </form>
         </div>
         <h4>Job info:</h4>
         <table class="u-full-width">
